@@ -143,57 +143,7 @@ $(document).ready(function(){
         		<td>
                     <select name="rack_start" class="form-control input-sm input-w-auto">
             		<?php
-                    // available spaces
-                    $available = array();
-                    for($m=1; $m<=$rack->size; $m++) {
-                        $available[$m] = $m;
-                    }
-                    // available back
-                    if($rack->hasBack!="0") {
-                    for($m=1; $m<=$rack->size; $m++) {
-                        $available_back[$m+$rack->size] = $m;
-                    }
-                    }
-
-                    if($rack_devices!==false) {
-                        // front side
-                        foreach ($rack_devices as $d) {
-                            for($m=$d->rack_start; $m<=($d->rack_start+($d->rack_size-1)); $m++) {
-                                if(array_key_exists($m, $available)) {
-                                    unset($available[$m]);
-                                }
-                            }
-                        }
-                        // back side
-                        if($rack->hasBack!="0") {
-                            foreach ($rack_devices as $d) {
-                                for($m=$d->rack_start; $m<=($d->rack_start+($d->rack_size-1)); $m++) {
-                                    if(array_key_exists($m, $available_back)) {
-                                        unset($available_back[$m]);
-                                    }
-                                }
-                            }
-                        }
-                    }
-
-                    if($rack_contents!==false) {
-                        // front side
-                        foreach ($rack_contents as $d) {
-                            for($m=$d->rack_start; $m<=($d->rack_start+($d->rack_size-1)); $m++) {
-                                if(array_key_exists($m, $available)) {
-                                    unset($available[$m]);
-                                }
-                            }
-                        }
-                        // back side
-                        foreach ($rack_contents as $d) {
-                            for($m=$d->rack_start; $m<=($d->rack_start+($d->rack_size-1)); $m++) {
-                                if(is_array($available_back) && array_key_exists($m, $available_back)) {
-                                    unset($available_back[$m]);
-                                }
-                            }
-                        }
-                    }
+                    list($available, $available_back) = $Racks->free_u($rack, $rack_devices, $rack_contents);
 
                     // print available spaces
                     if($rack->hasBack!="0") {
